Initial commit - ToDo app with Docker

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple To-Do List</title>
+  <title>Simple To-Do List ok?</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
