--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>My To-Do List creativewebo?</h1>
+    <h1>My To-Do List prajwal?</h1>
     <input type="text" id="taskInput" placeholder="Enter a new task">
     <button onclick="addTask()">Add</button>
     <ul id="taskList"></ul>
